add many features like pin set, all time data download as pdf, analytics page update etc.
